--- a/index.html
+++ b/index.html
@@ -4,7 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>Let's play!</header>
+    <div class="centerGround">
+      <div class="playground">
+        <div class="scorecard">
+          <div class="winScore">First to score 5 wins.</div>
+          <div class="scores">player; computer</div>
+        </div>
+        <div class="players">
+          <div class="leftPlayer">
+            <img src="images/rockRight.png" alt="" />
+          </div>
+          <div class="rps"><div class="choice">
+            <div class="rock">Rock</div>
+            <div class="paper">Paper</div>
+            <div class="scissor">Scissor</div>
+          </div></div>
+          <div class="rightPlayer">
+            <img src="images/rock.png" alt="" />
+          </div>
+        </div>
+        <div class="message">You win the game.</div>
+      </div>
+    </div>
+  </body>
 </html>
