Remove background from images. Add the rock paper scissor option and a little hover effect

--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
       <div class="playground">
         <div class="scorecard">
           <div class="winScore">First to score 5 wins.</div>
-          <div class="scores">player; computer</div>
+          <div class="scores">player  :  computer</div>
         </div>
         <div class="players">
           <div class="leftPlayer">
-            <img src="images/rockRight.png" alt="" />
+        
+            <img src="images/rockRIght.png" alt="" />
           </div>
-          <div class="rps"><div class="choice">
-            <div class="rock">Rock</div>
-            <div class="paper">Paper</div>
-            <div class="scissor">Scissor</div>
-          </div></div>
+
+          <div class="choice">
+            <img id="rps" src="images/rockMiddle.png" alt="Rock" />
+
+            <img id="rps" src="images/paperMiddle.png" alt="Paper" />
+
+            <img id="rps" src="images/scissorMiddle.png" alt="Scissor" />
+          </div>
+
           <div class="rightPlayer">
             <img src="images/rock.png" alt="" />
           </div>
