Connect the logic with GUI

--- a/index.html
+++ b/index.html
@@ -23,16 +23,15 @@
         </div>
         <div class="players">
           <div class="leftPlayer">
-        
             <img src="images/rockRIght.png" alt="" />
           </div>
 
           <div class="choice">
-            <img id="rps" src="images/rockMiddle.png" alt="Rock" />
+            <img class="rps rock" src="images/rockMiddle.png" alt="Rock" />
 
-            <img id="rps" src="images/paperMiddle.png" alt="Paper" />
+            <img class="rps paper" src="images/paperMiddle.png" alt="Paper" />
 
-            <img id="rps" src="images/scissorMiddle.png" alt="Scissor" />
+            <img class="rps scissor" src="images/scissorMiddle.png" alt="Scissor" />
           </div>
 
           <div class="rightPlayer">
