Change the image of rock paper scissor everytime a new option is selected

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="players">
           <div class="leftPlayer">
-            <img src="images/rockRIght.png" alt="" />
+            <img src="images/RockRight.png" alt="" />
           </div>
 
           <div class="choice">
@@ -35,7 +35,7 @@
           </div>
 
           <div class="rightPlayer">
-            <img src="images/rock.png" alt="" />
+            <img src="images/Rock.png" alt="" />
           </div>
         </div>
         <div class="message">You win the game.</div>
