--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img src="images/Rock.png" alt="" />
           </div>
         </div>
-        <div class="message">You win the game.</div>
+        <div class="message"></div>
       </div>
     </div>
   </body>
