Remove redundant codes and add a media query.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="playground">
         <div class="scorecard">
           <div class="winScore">First to score 5 wins.</div>
-          <div class="scores">player  :  computer</div>
+          <div class="scores">Player: 0 --- 0: Computer</div>
         </div>
         <div class="players">
           <div class="leftPlayer">
